// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox component should render a System message 1`] = `
<styled.div
  className=""
  onClick={null}
  onKeyPress={null}
>
  <SystemMessage />
</styled.div>
`;

exports[`MessageBox component should render a Time message 1`] = `
<styled.div
  className=""
  onClick={null}
  onKeyPress={null}
>
  <styled.div>
    <Avatar
      alt=""
      className="LT-Avatar-Container"
      color={null}
      size="xsmall"
      sizes={null}
      src="https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg"
      srcSet={null}
      status=""
      type="circle"
      withStatus={false}
    />
  </styled.div>
  <TimeMarkMessage
    className="LT-TimeMarkMessage-Container"
    text=""
  />
</styled.div>
`;

exports[`MessageBox component should render without issues 1`] = `
<styled.div
  className=""
  onClick={null}
  onKeyPress={null}
>
  <styled.div
    position="left"
  >
    <Avatar
      alt=""
      className="LT-Avatar-Container"
      color={null}
      size="xsmall"
      sizes={null}
      src="https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg"
      srcSet={null}
      status=""
      type="circle"
      withStatus={false}
    />
  </styled.div>
  <NormalMessageBox
    className=""
    message={
      Object {
        "person": Object {
          "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
          "email": "",
          "type": "Client",
        },
        "position": "left",
        "text": "Buenas Tardes",
        "type": "Text",
      }
    }
    onActionMessageClick={null}
    onClick={null}
    onDownload={null}
    onForwardClick={null}
    onMessageClick={null}
    onOpen={null}
    onTitleClick={null}
    person={null}
    position="left"
    status="read"
    text=""
    type="text"
  />
</styled.div>
`;
